--- a/Pres/PowerModelsPres.tex
+++ b/Pres/PowerModelsPres.tex
@@ -70,6 +70,7 @@
 \newcommand{\YshR}{Y^{shR}}
 \newcommand{\YshI}{Y^{shI}}
 \newcommand{\WW}{W}
+\newcommand{\WSet}{\mathcal{W}}
 \newcommand{\W}{w}
 \newcommand{\Wff}{{\W}^{ff}}
 \newcommand{\Wtt}{{\W}^{tt}}
@@ -118,7 +119,7 @@ Buses are indexed by $i \in N$ and lines (including transformers) are indexed by
 \begin{subequations}
 \label{EqDSP}
 \begin{align}
-  & W = v v^* \label{rank1}\\
+  & W \in v\, v^* \label{rank1}\\
   & P_i^{min} \leq p_i^G \leq P_i^{max}, \quad Q_i^{min} \leq q_i^G \leq Q_i^{max}, \quad i\in N \label{PGBds} \\
   & p_i^{sh}(\WW_{ii}) 
 + \sum_{\llll \in \Lines_\ii^{\from} } \p{\from}_{\llll}(\WW_\llll)  
@@ -129,7 +130,27 @@ Buses are indexed by $i \in N$ and lines (including transformers) are indexed by
 \end{align}
 \end{subequations}
 \end{footnotesize}
-where $v,W,p^G,q^G,u$ are decision variables. 
+where $v,W,p^G,q^G,u$ are decision variables.  
+\end{frame}
+
+\begin{frame}{PowerModels.jl}
+Core Problem Specifications
+\begin{itemize}
+\item Power Flow (pf)
+\item Optimal Power Flow (opf)
+\item Optimal Transmission Switching (ots)
+\item Transmission Network Expansion Planning (tnep)
+\end{itemize}
+Core Network Formulations parameterized by set $\WSet$
+\begin{itemize}
+\item AC rectangular with $\WSet = \{ v v^* \; : \; v \in \mathbb{C}^{|N|}\}$
+\item AC polar %with $W_{i,j}=|V_i||V_j|(\cos(\theta_i-\theta_j) + \mathfrak{i}\sin(\theta_i-\theta_j))$
+\item SDP where $\WSet = \{ \WW \; : \; \WW \succeq 0\}$
+\item SOCP where $\WSet = \{ \WW \; : \; \WW_l \succeq 0\;\text{for}\; l \in L\}$ where $\WW_l := \left[\begin{array}{cc} \WW_{i,i} & \WW_{i,j} \\ \WW_{j,i} & \WW_{j,j} \end{array}\right]$ for $(i,j)=l \in L$.
+\item DC 
+\item LPAC
+\item QC
+\end{itemize}
 \end{frame}
 
 \begin{frame}{Power System Model: Feasibility Problem}
@@ -140,7 +161,7 @@ Buses are indexed by $i \in N$ and lines (including transformers) are indexed by
 \begin{align}
 &\min_{\substack{v,W,p^G,q^G,\\ p^f,p^t,q^f,q^t,\\ u \geqq 0}} \quad 
   \sum_{i \in N} u_i^p + u_i^q  \notag \\
-  & W = v v^* \notag\\
+  & W \in \WSet \notag\\
   & P_i^{min} \leq p_i^G \leq P_i^{max}, \quad Q_i^{min} \leq q_i^G \leq Q_i^{max}, \quad i\in N \notag \\
   & (V_i^{min})^2 \leq W_{ii} \leq (V_i^{max})^2,\quad i\in N, \notag \\
   & -u_i^p \le p_i^{sh}(\WW_{ii}) - p^G_i + P^D_i 
@@ -153,13 +174,14 @@ Buses are indexed by $i \in N$ and lines (including transformers) are indexed by
 	\le u_i^q \quad i\in N. \notag
 \end{align}
 \end{subequations}
-where $v,W,p^G,q^G,u$ are decision variables. 
+where $W,p^G,q^G,u$ are decision variables. 
 \end{footnotesize}
 %&  (p_{l}^{f,0,-} + p_{l}^{f,0,+}) + (p_{l}^{t,0,-} + p_{l}^{t,0,+}) + (q_{l}^{f,0,-} + q_{l}^{f,0,+}) + (q_{l}^{t,0,-} + q_{l}^{t,0,+})  \notag \\
 %& =  (p_{l}^{f,1,-} + p_{l}^{f,1,+}) + (p_{l}^{t,1,-} + p_{l}^{t,1,+}) + (q_{l}^{f,1,-} + q_{l}^{f,1,+}) + (q_{l}^{t,1,-} + q_{l}^{t,1,+}) + u^K, \quad \llll \in L. \notag
 \end{frame}
 
-\begin{frame}{Definitions}
+\begin{frame}{Definitions for defining the Feasibility Problem with Robustness}
+$K$ is the nonnegative integer budget of the attacker, the number of lines that may be cut.
 $L$ is the set of lines (including transformers)
 \begin{enumerate}
 \item $L^0 \subseteq L$ is the set of lines that are fixed as on; an attacker is committed to \emph{not} attacking line $l \in L^0$
@@ -173,7 +195,7 @@ $\{ L^0, L^1, L^*\}$ is a partition of the set $L$.
 \begin{footnotesize}
 \begin{subequations}
 \begin{align}
-&\min_{\substack{p,q\\ u \geqq 0,W=vv^*}} \quad 
+&\min_{\substack{p,q\\ u \geqq 0,W\in \WSet}} \quad 
   (K-|L^1|) u^K + \sum_{i \in N} u_i^p + u_i^q + \sum_{l \in L^*} u_l^{pf1} + u_l^{ft1} + u_l^{qf1} + u_l^{qt1}  \notag \\
   & P_i^{min} \leq p_i^G \leq P_i^{max}, \quad Q_i^{min} \leq q_i^G \leq Q_i^{max}, \quad (V_i^{min})^2 \leq W_{ii} \leq (V_i^{max})^2,\quad i\in N \notag \\
   & -u_i^p \le p_i^{sh}(\WW_{ii}) - p^G_i + P^D_i 
@@ -204,7 +226,7 @@ $\{ L^0, L^1, L^*\}$ is a partition of the set $L$.
 \begin{tiny}
 \begin{subequations}
 \begin{align}
-&\min_{\substack{p,q\\ u \geqq 0,W=vv^*}} \quad 
+&\min_{\substack{p,q\\ u \geqq 0,W \in \WSet}} \quad 
   \sum_{i \in N} u_i^{p}(1-|\alpha_{\ii}|) +  u_i^{q}(1-|\beta_{\ii}|)   
 + u^K(K-|L^1|-\sum_{l \in L^*} x_l) \notag \\
   &+\sum_{\ii \in N} W_\ii(\gamma_{\ii}^+-\gamma_{\ii}^-) +p_\ii^{sh}(\WW_{ii})\alpha_\ii + q_\ii^{sh}(\WW_{ii})\beta_\ii - \langle C , \WW \rangle + \langle C, v v^* \rangle \notag\\
@@ -224,6 +246,11 @@ $\{ L^0, L^1, L^*\}$ is a partition of the set $L$.
 \end{tiny}
 \end{frame}
 
+\begin{frame}{Definition}
+If we assume that $\WSet$ has a conic structure, then its dual cone is defined by
+$$\WSet^* := \{ C \; : \; \langle C, \WW \rangle \ge 0\; \text{for all}\; \WW \in \WSet \}.$$
+\end{frame}
+
 \begin{frame}{Double-checking dual equivalence: Forming the dual problem}
 \begin{tiny}
 \begin{subequations}
@@ -235,7 +262,7 @@ $\{ L^0, L^1, L^*\}$ is a partition of the set $L$.
 & | \alpha_i -\lambda_\llll^f| \le x_l,\quad| \alpha_j - \lambda_l^t| \le x_l,\quad |\beta_i - \mu_l^f | \le x_l,\quad|\beta_j - \mu_l^t| \le x_l,\quad (i,j)=l \in L^* \notag \\
 & |\lambda_l^f| \le 1-x_l,\quad |\lambda_l^t| \le 1-x_l,\quad|\mu_l^f| \le 1-x_l,\quad |\mu_l^t| \le 1-x_l,\quad l \in L^* \notag \\
 %& \lambda_l^f = 0,\quad \lambda_l^t = 0,\quad \mu_l^f = 0,\quad \mu_l^t = 0,\quad l \in L^1 \notag \\
-& (K-|L^1|-\sum_{l \in L^*} x_l) \ge 0, \qquad\qquad C \succeq 0\notag, \qquad C=H\\
+& (K-|L^1|-\sum_{l \in L^*} x_l) \ge 0, \qquad\qquad C \in \WSet^* \notag, \qquad C=H\\
 \end{align}
 \end{subequations}
 where $H(\alpha,\beta,\gamma,\lambda,\mu)$ is the matrix such that for all $\WW$, 
